- CHANGE: General clean up of errors, messages etc to make clear what function they come from (not always clear in pipes)




========================== inspect() ============================
Changes

- CHANGE: `time = 1` and `oxygen = 2` the defaults rather than NULL
- CHANGE: if `oxygen = NULL` now inspects ALL columns
- NEW: added `width` input for rolling reg plot (default 0.1)
- CHANGE: updated roxygen docs. There was quite a lot out of date...
- CHANGE: Added message if multiple columns inspected that subsequent functions will only use first 2 by default
- CHANGE: Multiple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- FIX: Rolling rate plot failed with even a single NA in time or oxygen data.
- CHANGE: Prints NA locations for all oxygen columns they are found in (previously only printed if a 2-col df)
- CHANGE: If multiple columns in df input, warning that 1:2 used by default.
- CHANGE: Stops if 'oxygen' or 'time' columns not present in the input
- CHANGE: Stops if 'oxygen' and 'time' columns conflict
- FIX: Fix for points sometimes being plotted twice slightly offset in big datasets.




========================== S3 Methods ============================

All
- Changed primary input `x` to `object` for consistency across all (was in some, not in others)
- All summary S3 have `export = TRUE` for export of summary table/value
- Added `return(invisible(object))` where missing to allow piping
- All stop if 'pos' too high
- All print much better with nicer spacing, especially in pipes
- auto_rate - all S3 methods stop if no rates found (can happen with over-enthusiastic subsetting in new subset_rate fn)

print.adjust_rate
- FIX: prints adjustment correctly if pos > 1

summary.adjust_rate
- FIX: 'adjustment' column was missing

summary.convert_rate
- FIX: prints summary table as columns correctly

print.inspect
- NEW: if uneven time, now prints min/max intervals found